less/styles.less
body {
  font-family: 'Open Sans', sans-serif;
  color: @mainFontColor;
  position: relative;
}

section {
  padding: 30px 0;
}

i {
  color: @mainColor;
}

.carousel .item {
  background: no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.carousel-indicators li {
  border: 1px solid @mainColor;
}

.carousel-indicators .active {
  background-color: @mainColor;
}

.slide-content {
  background-color: @mainColorRGBa;
  color: @secondaryFontColor;
  position: absolute;
  top: 30%;
  width: 100%;
}

.slide-content h1 {
  font-weight: 700;
  font-size: 74px;
  letter-spacing: -4px;
}

.slide-content h2 {
  font-weight: 300;
  letter-spacing: -1px;
}

.section-header {
  border-bottom: 3px solid @mainColor;
  text-transform: uppercase;
  text-align: center;
  margin-bottom: 40px;
}

.section-header h1, .section-header-inverted h1 {
  font-weight: 300;
  letter-spacing: -1px;
  font-size: 55px;
}

.section-header-inverted {
  color: @secondaryFontColor;
  border-bottom: 3px solid @secondaryFontColor;
  text-transform: uppercase;
  text-align: center;
  margin-bottom: 10px;
}

#services {
  padding-bottom: 75px;
}
.service {
  padding-top: 30px;
  text-align: center;
}
.service .fa-stack {
  font-size: 100px;
}

.service .fa-stack-2x {
  color: @mainColor;
}

.service .fa-stack-1x {
  color: @secondaryFontColor;
}

.service .fa-stack-1x {
  transition:all 0.3s ease-out;
}

.service:hover .fa-stack-1x {
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1);
  -webkit-transform: scale(-1, 1);
  -ms-transform: scale(-1, 1);
  transform: scale(-1, 1);
  transition:all 0.3s ease-out;
}

.service p {
  padding-top: 15px;
  font-size: 1em;
}

.service h2 {
  font-weight: 300;
}

.quotation {
  background: linear-gradient(
		  rgba(0, 0, 0, 0.7),
		  rgba(0, 0, 0, 0.7)
  ),  url('../img/quotation-bg.jpg') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  color: #ffffff;
  font-size: 30px;
  text-align: center;
  padding: 45px 0;
}

.quotation p {
  font-weight: 300;
  letter-spacing: -1px;
}

.left-quote-sign {
  float: left;
}

.right-quote-sign {
  float: right;
}

#about-us p {
  text-align: center;
}

@media (max-width: 699px) {
  .slide-content h1 {
	font-size: 1em;
  }
  .slide-content h2 {
	font-size: 1em;
  }

  .quotation {
    font-size: 18px;
	background-size: auto;
  }
}

@media (min-width: 630px) and (max-width: 767px) {
  .col-xs-12 {
    width: 50%;
  }
}

.quotation i {
  float: left;
}
.quotation .fa-quote-left {
  float: left;
}

.quotation .fa-quote-right {
  float: right;
}

.skill-chart {
  margin-left: auto;
  margin-right: auto;
}

.our-works {
  background: linear-gradient(
		  @ourWorksRGBa,
          @ourWorksRGBa
  ),  url('../img/our-works-bg.jpg') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  color: @secondaryFontColor;
}

#isotope {
  margin-top: 20px;
  text-align: center;
}


.project-item {
  margin-bottom: 20px;
  overflow: hidden;
  position: relative;
}

.project-over-layer {
  background: linear-gradient(
		rgba(255, 255, 255, 0.8),
		rgba(255, 255, 255, 0.8)
  );
  width: 100%;
  height: 100%;
  position: absolute;
  top: -100%;
  transition:all 0.3s ease-out;
  text-align: center;
  color: @mainFontColor;
}

.project-description {
  position: absolute;
  bottom: 0;
  left: 0;
}

.project-description p {
  padding: 0 15px;
}

.project-description h1 {
  border-bottom: 2px solid @mainColor;
  margin-left: 10%;
  margin-right: 10%;
  padding-bottom: 5px;
  color: @mainColor;
  font-weight: bold;
  font-size: 1.4em;
}

.project-item:hover .project-over-layer {
  top: 0;
  transition:all 0.3s ease-out;
}

#filters {
  text-align: center;
}

.our-works .btn {
  background: transparent;
  color: @secondaryFontColor;
  font-weight: bold;
  font-size: 1.3em;
}

.our-works .btn:hover {
  background: @secondaryFontColor;
  color: @mainColor;
}

.our-works input {
  display: none;
}

.our-works input:checked + .btn {
  background: @secondaryFontColor;
  color: @mainColor;
}

#news {
  margin-bottom: 70px;
}

#news p {
  text-align: center;
  margin-bottom: 50px;
}

.news-photo {
  position: relative;
  overflow: hidden;
}

.news-img-overlayer {
  padding-top: 10%;
  font-size: 2.5em;
  text-align: center;
  width: 100%;
  height: 100%;
  background: @mainColor;
  position: absolute;
  top: 100%;
  left: 0;
  transition:all 0.3s ease-out;
}

.news-img-overlayer .fa-stack-1x {
  color: @mainColor;
}

.news-img-overlayer .fa-stack-2x {
  color: @secondaryFontColor;
}

.news-item {
  margin-bottom: 15px;
}

.news-item:hover .news-img-overlayer {
  top: 40%;
  transition:all 0.3s ease-out;
}

.news-text {
  font-size: 0.9em;
  padding: 10px;
  overflow: hidden;
  background: @mainColor;
  color: @secondaryFontColor;
  min-height: 50px;
}

.news-text h4 {
  margin-bottom: 0px;
  font-weight: bold;
}

#news .news-text p {
  text-align: left;
  margin: 10px 0;
}

.news-text .btn {
  background: @secondaryFontColor;
  color: @mainColor;
  font-weight: bold;
  border-radius: 0;
  transition:all 0.5s ease-out;
}

.news-text .btn:hover {
  background: linear-gradient(@mainColorRGBa, @mainColorRGBa) @secondaryFontColor;
  color: @mainColor;
  transition:all 0.5s ease-out;
}

.read-more {
  width: 100%;
  text-align: center;
  margin-top: 20px;
}

.team-section {
  background: @teamBackground;
}

.team-member h4 {
  padding: 10px;
  text-align: center;
  font-weight: bold;
  border-bottom: 1px solid @mainColor;
}

.team-member p {
  font-size: 0.9em;
  text-align: center;
}

.team-member img {
  margin: 0 auto;
}

.team-member:hover img {
  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
  filter: gray;
  -webkit-filter: grayscale(100%);
  transition: all 0.3s ease-out;
}

.team-member:hover h4 {
  background: @mainColor;
  color: @secondaryFontColor;
  transition: all 0.3s ease-out;
}

.contact {
  background: linear-gradient(
		  rgba(255, 255, 255, 0.8),
		  rgba(255, 255, 255, 0.8)
  ),  url('../img/contact-bg.jpg') no-repeat center center fixed;
  border-top: 5px solid @mainColor;
  border-bottom: 5px solid @mainColor;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.contact-info {
  font-size: 1.2em;
}

.contact-info .fa {
  color: @mainColor;
}

.phone-number {
  font-size: 2em;
}

.address-info {
  margin-bottom: 40px;
}

.form-control {
  border-radius: 0;
}

.btn-default {
  text-shadow: 0 0 0;
  font-size: 1.5em;
  background: @mainColor;
  color: @secondaryFontColor;
  padding: 10px 40px;
  border-radius: 0;
  text-transform: uppercase;
  transition:all 0.5s ease-out;
}

.btn-default:hover {
  text-shadow: 0 0 0;
  background: @secondaryFontColor;
  color: @mainColor;
  border: 1px solid @mainColor;
  transition:all 0.5s ease-out;
}

#map-container {
  height: 500px;
}

footer {
  background: @mainColor;
  padding: 30px 0;
}

footer i {
  color: @secondaryFontColor;
  float: right;
  margin: 0 5px;
  transition:all 0.3s ease-out;
}

footer i:hover {
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1);
  -webkit-transform: scale(-1, 1);
  -ms-transform: scale(-1, 1);
  transform: scale(-1, 1);
  transition:all 0.3s ease-out;
}

.navbar {
  font-size: 1.2em;
  padding: 20px 0;
  -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
  -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
  transition: background .5s ease-in-out,padding .5s ease-in-out;
}
.navbar-default.top-nav-collapse {
  padding: 0;
  border-color: @mainColor;
  background: @mainColor none;
  box-shadow: none;
}
.navbar-default.top-nav-collapse .navbar-nav>li>a {
  color: @secondaryFontColor;
}
.navbar-default.top-nav-collapse .navbar-brand, .navbar-default.top-nav-collapse .navbar-brand:focus {
  color: @secondaryFontColor;
}
.navbar-default {
  border-color: transparent;
  background: @secondaryFontColor none;
  box-shadow: none;
}
.navbar-default .navbar-nav>li>a {
  color: @mainColor;
}
.navbar-default .navbar-brand, .navbar-default .navbar-brand:focus {
  color: @mainColor;
}
.navbar-default .navbar-nav>li.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
  background: @secondaryFontColor;
  box-shadow: none;
  color: @mainColor;
  -webkit-transition: background .5s ease-in-out;
  -moz-transition: background .5s ease-in-out;
  transition: background .5s ease-in-out;
}
.blog-page {
  margin-top: 100px;
}
.post-preview {
  border-bottom: 2px solid @mainColor;
  margin-bottom: 50px;
}
.post-preview h1 {
  font-size: 2em;
  font-weight: normal;
  margin-top: 0;
  margin-bottom: 20px;
}
.post-preview p {
  font-size: 1.2em;
  margin-top: 20px;
  text-align: justify;
}
.post-preview .read-more {
  color: @mainColor;
  font-weight: bold;
  text-align: right;
  float: right;
  margin-bottom: 20px;
  font-size: 1.2em;
}
.post-preview .read-more:hover {
  text-decoration: none;
}
.leave-a-comment {
  color: @mainColor;
  font-weight: bold;
  font-size: 1.2em;
}
.leave-a-comment:hover {
  text-decoration: none;
}
.tag {
  font-size: 2em;
}
.publication-date {
  font-size: 2em;
  font-weight: bold;
}
.post-details {
  padding-bottom: 50px;
}
.newsletter h1 {
  text-align: center;
}

.newsletter input {
  width: 30%;
  margin: auto;
  height: 50px;
}

.newsletter form {
  text-align: center;
}

.social {
  display: table;
  float: left;
  font-size: 1.2em;
  margin: 5px;
  padding: 5px;
  border: 1px solid #b9b9b9;
  color: @mainColor;
}
.social span {
  color: @mainFontColor;
  display: table-cell;
  vertical-align: middle;
  padding-left: 10px;
}
.social:hover {
  text-decoration: none;
  color: @mainColor;
}

.post-preview hr {
  width: 40%;
  margin: 10px 0;
  height: 2px;
  background-color:#b9b9b9;
  border: 0 none;
}

.comments h1 {
  margin-bottom: 0;
}

.comment {
  padding: 0;
}

.comment h2 {
  color: #3a3a3a;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 5px;
}
.comment .date {
  color: #3a3a3a;
  font-weight: bold;
}
.comment p {
  margin: 10px 0;
  padding-left: 40px;
  font-size: 1em;
}

.post-reply {
  padding: 0;
}

.post-reply h1 {
  margin: 10px 0;
}

.post-reply input {
  width: 40%;
  height: 50px;
}

.post-reply button {
  float: right;
}

#google-map {
  padding: 0;
}

